# pa_itemku

./: .gitignore  README.md  constants.py  install.ps1  main.py  pyproject.toml  requirements.txt  run.ps1  test.py  update.ps1
app/: __init__.py  main_process.py
app/models/: crawl_model.py  crwl_api_models.py  crwl_models.py  gsheet_model.py
app/processes/: crwl.py  crwl_api.py  itemku_api.py
app/utils/: biji_extract.py  common_utils.py  dd_utils.py  decorators.py  fun_extract.py  g2g_extract.py  ggsheet.py  google_api.py  gsheet.py  logger.py  pa_extract.py  selenium_util.py  sheet_operator.py  stock_fake.py  task_manager.py  update_messages.py
src/app/models/: gsheet_model.py
src/app/shared/: consts.py  exceptions.py
src/app/utils/: decorators.py
