[project]
name = "itemku-tl"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "gspread>=6.1.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "pytz>=2025.1",
    "seleniumbase>=4.37.2",
]

requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
